# s3dedup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/context/: anti-patterns.md  decisions.md  decomposition.md  scope.md  status.md
src/s3dedup/: __init__.py  __main__.py  cleaner.py  cli.py  db.py  diagnose.py  hasher.py  media.py  models.py  normalizer.py  reporter.py  scanner.py  script_generator.py  utils.py
tests/: conftest.py  test_cleaner.py  test_cli.py  test_db.py  test_diagnose.py  test_e2e.py  test_hasher.py  test_media.py  test_normalizer.py  test_reporter.py  test_scanner.py  test_script_generator.py
