[project]
name = "s3dedup"
version = "0.1.0"
description = "Outil CLI pour détecter les doublons dans un bucket S3"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
    "duckdb>=1.1",
    "mutagen>=1.47",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]

[project.scripts]
s3dedup = "s3dedup.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3dedup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
